--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,8 @@ project(
 	HOMEPAGE_URL "http://lameguy64.net/?page=psn00bsdk"
 )
 
-file(GLOB _sources *.s *.cpp)
-psn00bsdk_add_executable(template GPREL ${_sources} cursor.cpp island.cpp tile.cpp day.cpp toolbar.cpp bank.cpp jukebox.cpp)
+file(GLOB _sources *.s *.cpp *.c *.h)
+psn00bsdk_add_executable(template GPREL ${_sources} cursor.cpp island.cpp tile.cpp day.cpp toolbar.cpp bank.cpp jukebox.cpp object.cpp menu.cpp)
 
 psn00bsdk_add_cd_image(
 	iso      # Target name
